--- a/install
+++ b/install
@@ -111,8 +111,28 @@ IF "%DOCKER_INSTALLED%"=="1" IF "%TAR_INSTALLED%"=="1" (
 :: Now we know know we have Docker and tar we check with the user if
 :: installing in our default location (%USERPROFILE%\%INSTALL_FOLDER%)
 :: is ok. If not, ask for an alternative.
-SET /P "INSTALL_DIR=Where would you like to install nomi-discord-python? Current choice: %USERPROFILE%\%INSTALL_FOLDER%): "
-IF "%INSTALL_DIR%" == "" SET "INSTALL_DIR=%USERPROFILE%\%INSTALL_FOLDER%"
+:: Set default installation directory
+SET "DEFAULT_INSTALL_DIR=%USERPROFILE%\%INSTALL_FOLDER%"
+SET "INSTALL_DIR=%DEFAULT_INSTALL_DIR%"
+
+:prompt_install_dir
+ECHO Where would you like to install nomi-discord-python?
+ECHO Current choice: %INSTALL_DIR%
+SET /P "USER_INPUT=> "
+
+:: If user input is not empty, update the INSTALL_DIR
+IF NOT "%USER_INPUT%"=="" SET "INSTALL_DIR=%USER_INPUT%"
+
+:: Display the chosen directory and ask for confirmation
+ECHO You chose: %INSTALL_DIR%
+SET /P "CONTINUE=Is this correct? (Y/N): "
+
+IF NOT /I "%CONTINUE%"!="Y" (
+    GOTO prompt_install_dir
+)
+
+ECHO:
+ECHO Proceeding with installation in: %INSTALL_DIR%
 
 :: Create the folder if it doesn't exist.
 IF NOT EXIST "%INSTALL_DIR%" (
@@ -149,6 +169,8 @@ ECHO %INSTALL_DIR%
 ECHO:
 ECHO Any configuration files or startup scripts should be safe; however, if
 ECHO you are unsure, cancel now and save your files to a safe place before proceeding
+
+:: Prompt the user before proceeding
 SET /P CONTINUE="Are you sure you want to proceed with the installation? (Y/N): "
 IF /I NOT "%CONTINUE%" == "Y" (
     ECHO Extraction canceled. No changes were made.
@@ -359,8 +381,22 @@ fi
 # installing in our default location ($HOME/$INSTALL_FOLDER) is ok.
 # If not, ask for an alternative.
 DEFAULT_INSTALL_DIR="$HOME/$INSTALL_FOLDER"
-read -p "Where would you like to install nomi-discord-python? Current choice: $DEFAULT_INSTALL_DIR " INSTALL_DIR </dev/tty
-INSTALL_DIR=${INSTALL_DIR:-$DEFAULT_INSTALL_DIR}
+echo "Where would you like to install nomi-discord-python?"
+while true; do
+    # Prompt the user for the installation directory
+    echo "Current choice: $DEFAULT_INSTALL_DIR"
+    read -p "> " INSTALL_DIR </dev/tty
+    INSTALL_DIR=${INSTALL_DIR:-$DEFAULT_INSTALL_DIR}
+    
+    # Display the chosen directory and ask for confirmation
+    echo "You chose: $INSTALL_DIR"
+    read -p "Is this correct? (Y/N): " CONTINUE </dev/tty
+    CONTINUE=${CONTINUE,,}
+    if [[ "$CONTINUE" != "y" ]]; break
+done
+
+echo
+echo "Proceeding with installation in: $INSTALL_DIR"
 
 # Create the folder if it doesn't exist.
 if [ ! -d "$INSTALL_DIR" ]; then
@@ -390,8 +426,6 @@ if [ ! -f "$INSTALL_DIR/install.zip" ]; then
     echo "Something went wrong during the download. Please try again."
     exit 1
 fi
-
-exit 0
 
 # Warn the user that existing files will be overwritten. No going back now!
 echo "WARNING: This step will overwrite existing installation files in the directory:"
