--- a/install
+++ b/install
@@ -65,20 +65,20 @@ IF ERRORLEVEL 1 (
 )
 
 :: Display installation statuses
-IF "%DOCKER_INSTALLED%"=="1" (
+IF "%DOCKER_INSTALLED%" == "1" (
     ECHO [x] Docker is installed
 ) ELSE (
     ECHO [ ] Docker is not installed
 )
 
-IF "%TAR_INSTALLED%"=="1" (
+IF "%TAR_INSTALLED%" == "1" (
     ECHO [x] tar is installed
 ) ELSE (
     ECHO [ ] tar is not installed
 )
 
 :: If both are installed, continue
-IF "%DOCKER_INSTALLED%"=="1" IF "%TAR_INSTALLED%"=="1" (
+IF "%DOCKER_INSTALLED%" == "1" IF "%TAR_INSTALLED%" == "1" (
     ECHO:
     ECHO All required software is installed.
 ) ELSE (
@@ -88,15 +88,15 @@ IF "%DOCKER_INSTALLED%"=="1" IF "%TAR_INSTALLED%"=="1" (
     ECHO Please install the missing software and re-run the installer.
 
     SET /P "INSTALL_HELP=Would you like help installing the missing software? (Y/N): "
-    IF /I "%INSTALL_HELP%"=="Y" (
-        IF "%DOCKER_INSTALLED%"=="0" (
+    IF /I "%INSTALL_HELP%" == "Y" (
+        IF "%DOCKER_INSTALLED%" == "0" (
             ECHO Docker is required but not installed.
             SET /P "OPEN_BROWSER=Would you like to open the Docker download page now? (Y/N): "
             IF /I "!OPEN_BROWSER!" == "Y" (
                 START https://www.docker.com/products/docker-desktop/
             )
         )
-        IF "%TAR_INSTALLED%"=="0" (
+        IF "%TAR_INSTALLED%" == "0" (
             ECHO tar is required but not installed. It was integrated into Windows 10 in 2018. Do you need to update?
             ECHO Alternatively tar can be installed by installing Git for Windows, which provides tar and other Unix tools.
             SET /P "OPEN_BROWSER=Would you like to open the Git for Windows download page now? (Y/N): "
@@ -122,13 +122,14 @@ ECHO Where would you like to install nomi-discord-python?
 ECHO Current choice: %INSTALL_DIR%
 SET /P "USER_INPUT=Enter to Accept > "
 
-IF NOT "%USER_INPUT%"=="" SET "INSTALL_DIR=%USER_INPUT%"
+IF NOT "%USER_INPUT%" == "" SET "INSTALL_DIR=%USER_INPUT%"
 
 :: Display the chosen directory and ask for confirmation
-ECHO You chose: %INSTALL_DIR%
+ECHO Your choice: %INSTALL_DIR%
+ECHO:
 SET /P "CONTINUE=Is this correct? (Y/N): "
 
-IF NOT /I "%CONTINUE%"=="Y" (
+IF NOT /I "%CONTINUE%" == "Y" (
     GOTO prompt_install_dir
 )
 
@@ -169,7 +170,8 @@ ECHO WARNING: This step will overwrite existing installation files in the direct
 ECHO %INSTALL_DIR%
 ECHO:
 ECHO Any configuration files or startup scripts should be safe; however, if
-ECHO you are unsure, cancel now and save your files to a safe place before proceeding
+ECHO you are unsure, cancel now and save your files to a safe place before
+ECHO proceeding.
 
 :: Prompt the user before proceeding
 SET /P CONTINUE="Are you sure you want to proceed with the installation? (Y/N): "
@@ -326,14 +328,14 @@ else
 
     # Prompt user for help installing the missing software
     read -p "Would you like help installing the missing software? (Y/N): " INSTALL_HELP </dev/tty
-    INSTALL_HELP=${INSTALL_HELP,,}
+    INSTALL_HELP=$(echo "$INSTALL_HELP" | tr '[:upper:]' '[:lower:]')
 
     if [[ "$INSTALL_HELP" == "y" ]]; then
         # If Docker is not installed, prompt to open the Docker download page
         if [ "$DOCKER_INSTALLED" -eq 0 ]; then
             echo "Docker is required but not installed."
             read -p "Would you like to open the Docker download page now? (Y/N): " OPEN_BROWSER </dev/tty
-            OPEN_BROWSER=${OPEN_BROWSER,,}
+            OPEN_BROWSER=$(echo "$OPEN_BROWSER" | tr '[:upper:]' '[:lower:]')
             if [[ "$OPEN_BROWSER" == "y" ]]; then
                 # Attempt to open the browser with xdg-open (Linux) or open (macOS)
                 if command -v xdg-open >/dev/null 2>&1; then
@@ -390,9 +392,10 @@ while true; do
     INSTALL_DIR=${INSTALL_DIR:-$DEFAULT_INSTALL_DIR}
     
     # Display the chosen directory and ask for confirmation
-    echo "You chose: $INSTALL_DIR"
+    echo "Your choice: $INSTALL_DIR"
+    echo
     read -p "Is this correct? (Y/N): " CONTINUE </dev/tty
-    CONTINUE=${CONTINUE,,}
+    CONTINUE=$(echo "$CONTINUE" | tr '[:upper:]' '[:lower:]')
     if [[ "$CONTINUE" != "y" ]]; then
         break
     fi
@@ -431,15 +434,17 @@ if [ ! -f "$INSTALL_DIR/install.zip" ]; then
 fi
 
 # Warn the user that existing files will be overwritten. No going back now!
+echo
 echo "WARNING: This step will overwrite existing installation files in the directory:"
 echo "$INSTALL_DIR"
 echo
 echo "Any configuration files or startup scripts should be safe; however, if"
-echo "you are unsure, cancel now and save your files to a safe place before proceeding."
+echo "you are unsure, cancel now and save your files to a safe place before
+echo "proceeding."
 
 # Prompt the user for confirmation to proceed
 read -p "Are you sure you want to proceed with the installation? (Y/N): " CONTINUE </dev/tty
-CONTINUE=${CONTINUE,,}
+CONTINUE=$(echo "$CONTINUE" | tr '[:upper:]' '[:lower:]')
 
 if [[ "$CONTINUE" != "y" ]]; then
     echo "Extraction canceled. No changes were made."
@@ -447,18 +452,18 @@ if [[ "$CONTINUE" != "y" ]]; then
     exit 0
 fi
 
+
 # Proceed with unzipping the file using tar and overwrite existing files.
 # GitHub wraps the whole repository in a folder so we have to traverse
 # into that before before we can filter by the things we want to download.
 # After that, get the install script, the license and everything inside
 # the 'app' subdirectory. GNU tar and bsdtar behave differently so we need
 # to accomodate that
+echo "Extracting installation files..."
 if tar --version 2>&1 | grep -q "GNU tar"; then
-    echo "Detected GNU tar. Using --wildcards option."
     tar -xvf "$INSTALL_DIR/install.zip" -C "$INSTALL_DIR" --strip-components=1 \
         --wildcards --no-anchored '*/install' '*/LICENSE' '*/app/*'
 elif tar --version 2>&1 | grep -qi "bsdtar"; then
-    echo "Detected bsdtar. Falling back to --include option."
     tar -xvf "$INSTALL_DIR/install.zip" -C "$INSTALL_DIR" --strip-components=1 \
         --include="*/install" --include="*/LICENSE" --include="*/app/*"
 else
@@ -515,7 +520,7 @@ echo "The installation completed successfully."
 if [ -f "$INSTALL_DIR/create_nomi.sh" ]; then
     # Prompt the user to set up a Nomi
     read -p "Do you want to create a Nomi now? (Y/N): " RUN_SETUP </dev/tty
-    RUN_SETUP=${RUN_SETUP,,}
+    RUN_SETUP=$(echo "$RUN_SETUP" | tr '[:upper:]' '[:lower:]')
 
     if [[ "$RUN_SETUP" == "y" ]]; then
         echo "Creating a new Nomi..."
@@ -530,7 +535,7 @@ else
 fi
 
 read -p "Would you like to open the installation folder in a file browser? (Y/N): " OPEN_FOLDER </dev/tty
-OPEN_FOLDER=${OPEN_FOLDER,,}
+OPEN_FOLDER=$(echo "$OPEN_FOLDER" | tr '[:upper:]' '[:lower:]')
 if [[ "$OPEN_FOLDER" == "y" ]]; then
     if command -v xdg-open >/dev/null 2>&1; then
         # Linux (xdg-open is available)
